# graphrag-milvus-manager

./: .gitignore  main.py  pyproject.toml
src/milvus/: EMBEDDING_FIELDS.md  EMBEDDING_USAG.md  README.md  __init__.py
src/milvus/core/: collection_manager.py  config.py  constants.py  embedding_generator.py  parquet_importer.py  schema.py
src/milvus/legacy/: collection_store.py
src/milvus/query/: client.py  query_manager.py
src/milvus/scripts/: check_parquet_structure.py  milvus_create_collections.py  milvus_import_all.py  milvus_reset.py  milvus_workflow.py
src/milvus/tests/: test_basic.py  test_client_embed_crud.py
